# eu5_patcher

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  patch.cpp  patch.py  tutorial.md
include/: patch.hpp
src/: main.cpp
